setup logger and debug